--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.2.1",
   "description": "CoreUI React Open Source Bootstrap 4 Admin Template",
   "author": {
-    "name": "CoreUI",
+    "name": "CoreUI - Test of Marcos Eduardo",
     "url": "https://coreui.io",
     "github": "https://github.com/coreui",
     "twitter": "https://twitter.com/core_ui"
@@ -38,6 +38,7 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-phone-number-input": "^3.1.18",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
